fix for firefox on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,7 +49,7 @@ section {
   justify-content: space-evenly;
   flex-direction: column;
   width: 100%;
-  min-height: 1px;
+  min-height: 100px;
   height: 100%;
 }
 
